Pages comming from a page_pool can be on skb->frag_list
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/mem/page_pool02_SKB_return_callback.org
+++ b/areas/mem/page_pool02_SKB_return_callback.org
@@ -86,13 +86,18 @@ the pages directly:
  - more generally all paths that can grab pages from skbs.
 
 One design choice that solves many of Eric's concerns is that page_pool pages
-(that still contain DMA state) MUST NOT be used as part of SKB "frags" or
-frag-list.  Only the skb->head that points to the data "page", can belong to a
-page_pool.  After our changes to mvneta driver, we use build_skb() that uses
+(that still contain DMA state) MUST NOT be used as part of SKB "frags".
+Only the skb->head that points to the data "page", can belong to a page_pool.
+After our changes to mvneta driver, we use build_skb() that uses
 the page_pool data-pointer as skb->head.  The driver (mvneta) still have
 jumbo-frame support which uses SKB "frags", to handle that case, we "release"
 the page_pool state by calling page_pool_unmap_page() in driver, when assigning
 (the payload beyond PAGE_SIZE) it as "frags" (via skb_add_rx_frag() call).
+
+An page_pool page, can actually be "appended"/merged into another SKB as a
+skb->frag_list.  This might be the least intrusive thing, to detect
+mem_info->type is set, and not reject e.g. coalesce but instead fall-over to
+skb->flag_list coalescing.
 
 TODO: go through each case Eric pointed out and check constraints.
 
@@ -104,6 +109,7 @@ of another SKB.
 TODO: Look into code solutions
  - (1) simply reject coalesce action if mem_info->type is set
  - (2) "release" page_pool state, via calling page_pool_unmap_page()
+ - (3) use skb->frag_list coalesce instead
 
 * Testing procedures
 
